# OpenPARL

./: .gitignore  .pre-commit-config.yaml  BLOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  install.sh  pyproject.toml
.github/workflows/: fast-tests.yml
configs/: sglang_4B.yaml
docs/: architecture.md  reproducibility.md  reward.md
scripts/: launch_rag_server.sh  run-qwen3-0.6B-parl.sh  run-qwen3-4B-delegate-only.sh  run-qwen3-4B-orchestrator_only.sh  run-qwen3-4B-parl.sh  run-qwen3-4B-single.sh
src/openparl/: generate.py  prompts.py  rollout_log.py  run.py  tool.py
src/openparl/widesearch/: assign_task.py  orchestrator_tools.py  prepare_data.py  reward.py  reward_utils.py  search_client.py  subagent_prompts.py
tests/: test_reward.py  test_reward_utils.py
