[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openparl"
version = "0.1.0"
description = "Reproduction of Kimi K2.5 PARL Agent Swarm on WideSearch"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Guanxing Lu" }]
dependencies = [
    # miles is installed separately by install.sh (git+https + tag).
    "typer",
    "numpy",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/GuanxingLu/OpenPARL"
Issues = "https://github.com/GuanxingLu/OpenPARL/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
