[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openparl"
version = "0.1.0"
description = "Reproduction of Kimi K2.5 PARL Agent Swarm on WideSearch"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Guanxing Lu" }]
dependencies = [
    # miles is installed separately by install.sh (git+https + tag).
    "typer",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/GuanxingLu/OpenPARL"
Issues = "https://github.com/GuanxingLu/OpenPARL/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"
line_length = 119
ignore_whitespace = true
py_version = 310
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = ["openparl"]
src_paths = ["src"]
skip_glob = ["third_party/*"]

[tool.black]
line_length = 119
extend_exclude = "third_party/"

[tool.ruff]
line-length = 320
extend-exclude = ["third_party"]
select = [
    "E",      # Pycodestyle Errors
    "F",      # Pyflakes (unused imports, undefined names)
    "B",      # Flake8-Bugbear (logic bugs)
    "UP",     # pyupgrade
]
ignore = [
    "E402",   # module-import-not-at-top-of-file
    "E501",   # Line too long
]
